--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -50,6 +50,13 @@
         body, html, * {
             font-family: 'Work Sans', sans-serif;
 	}
+	    
+	button {
+	    background-color: #5C1F99;
+            border: 0;
+	    color: #fff;
+            padding: 5px 10px;
+        }
     </style>
   </head>
   <body>
