--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -57,6 +57,15 @@
 	    color: #fff;
             padding: 5px 10px;
         }
+    
+	    footer {
+    width: auto;
+    float: none;
+    position: relative;
+    bottom: auto;
+    -webkit-font-smoothing: subpixel-antialiased;
+    text-align: right;
+}
     </style>
   </head>
   <body>
