--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,15 @@
         body, html, * {
             font-family: 'Work Sans', sans-serif;
 	}
+
+footer {
+    width: auto;
+    float: none;
+    position: relative;
+    bottom: auto;
+    -webkit-font-smoothing: subpixel-antialiased;
+    text-align: right;
+}
     </style>
   </head>
   <body>
