--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
 {% seo %}
 
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+    <script src="{{ "/assets/js/main.css?v=" | append: site.github.build_revision | relative_url }}"></script>
+
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
@@ -18,14 +20,21 @@
             font-family: 'Work Sans', sans-serif;
 	}
 
-footer {
-    width: auto;
-    float: none;
-    position: relative;
-    bottom: auto;
-    -webkit-font-smoothing: subpixel-antialiased;
-    text-align: right;
-}
+	button {
+	    background-color: #5C1F99;
+            border: 0;
+	    color: #fff;
+            padding: 5px 10px;
+        }
+	    
+	footer {
+	    width: auto;
+	    float: none;
+	    position: relative;
+	    bottom: auto;
+	    -webkit-font-smoothing: subpixel-antialiased;
+	    text-align: right;
+	}
     </style>
   </head>
   <body>
